add session creation on login
