# routes/user.route.js
@@ -1,15 +1,13 @@
 const express = require("express");
 const {
   addNewUserController,
-  //   getUsersController,
+  fetchExistingUserController,
 } = require("../controllers/user.controller");
 
 const router = express.Router();
 
-// POST /users
-router.post("/", addNewUserController);
+router.post("/signup", addNewUserController);
 
-// GET /users
-// router.get("/", getUsersController);
+router.post("/login", fetchExistingUserController);
 
 module.exports = router;
